--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -15,41 +15,41 @@
 			
 			<div class="row">
 				<div class="col-md-4 col-sm-6 highlight">
-					<div class="h-caption"><h4><img src="{% static 'core/media/images/thn.png' %}" class="rounded" alt="Cinque Terre"></img><br><br>Trương Hồng Ngân</h4></div>
+					<div class="h-caption"><h4><img src="{% static 'core/media/images/thn.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Trương Hồng Ngân</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 highlight">
-					<div class="h-caption"><h4><img src="{% static 'core/media/images/thn.png' %}" class="rounded" alt="Cinque Terre"></img><br><br>Trần Phước</h4></div>
+					<div class="h-caption"><h4><img src="{% static 'core/media/images/tp.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Trần Phước</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 highlight">
 					<div class="h-caption"><h4><img src="{% static 'core/media/images/nam.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Nguyễn Hoài Nam</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 highlight">
 					<div class="h-caption"><h4><img src="{% static 'core/media/images/loi.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Trần Lê Thành Lợi</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>	
 					</div>
 				</div>
 
                 <div class="col-md-4 col-sm-6 highlight">
-					<div class="h-caption"><h4><img src="{% static 'core/media/images/quan.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Dương Quang Quân</h4></div>
+					<div class="h-caption"><h4><img src="{% static 'core/media/images/quan.jpeg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Dương Quang Quân</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>
 					</div>
 				</div>
 
                 <div class="col-md-4 col-sm-6 highlight">
 					<div class="h-caption"><h4><img src="{% static 'core/media/images/phong.jpg' %}" class="rounded" alt="Cinque Terre"></img><br><br>Lê Hoàng Phong</h4></div>
 					<div class="h-body text-center">
-						<p> Surface ios 11. FPT Software Developer. <br>Quảng Nam - 92, sinh năm 1991 có 11 đời chồng.<br> Chồng hiện tại: Trần Phước</p>
+						<p> K24TBD Đại học Duy Tân, Đà Nẵng </p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
